- No longer using Winstone embedded web server (now using Jetty)
- ExecutionContext and ExecutionContextFactory
  - Removed initComponent() and destroyComponent() methods; were never well
    supported (runtime component init and destroy caused issues)
  - Removed getCamelContext() from ExecutionContextFactory and
    ExecutionContext, use getToolInstance("Camel", CamelContext.class)
  - See new feature notes under Tool Factory
- Caching
  - Ehcache has been removed
  - The org.moqui.context.Cache interface is replaced by javax.cache.Cache
  - Configuration options for caches changed (moqui-conf.cache-list.cache)
- Async Services
  - Now uses more standard java.util.concurrent interfaces
  - Removed ServiceCallAsync.maxRetry() - was never supported
  - Removed ServiceCallAsync.persist() - was never supported well, used to
    simply call through Quartz Scheduler when set
  - Removed persist option from XML Actions service-call.@async attribute
  - Async services never called through Quartz Scheduler (only scheduled)
  - ServiceCallAsync.callWaiter() replaced by callFuture()
  - Removed ServiceCallAsync.resultReceiver()
  - Removed ServiceResultReceiver interface - use callFuture() instead
  - Removed ServiceResultWaiter class - use callFuture() instead
  - See related new features below
- Removed ServiceSemaphore entity, now using ServiceParameterSemaphore
- Deprecated methods
  - These methods were deprecated (usually by methods with shorter names)
    long ago and with other API changes now removing them
  - Removed getLocalizedMessage() and formatValue() from L10nFacade
  - Removed runScriptInCurrentContext(), evaluateCondition(),
    evaluateContextField(), and evaluateStringExpand() from ResourceFacade
- ArtifactHit and ArtifactHitBin now use same artifact type enum as
  ArtifactAuthz, for efficiency and consistency; configuration of
  artifact-stats by sub-type no longer supported, had little value and
  caused performance overhead